# Back-end/routes/swagger.json
@@ -16,26 +16,21 @@
   },
   "host": "localhost:8081",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "donor-controller",
-      "description": "Donor Controller"
-    }
-  ],
+
   "paths": {
     "/users": {
       "get": {
         "tags": [
-          "donor-controller"
+          "user-controller"
         ],
-        "summary": "View all donors",
-        "operationId": "getDonorsUsingGET",
+        "summary": "View all users",
+        "operationId": "getUserUsingGET",
         "produces": [
           "*/*"
         ],
         "responses": {
           "200": {
-            "description": "Successfully retrieved all donors",
+            "description": "Successfully retrieved all users",
             "schema": {
               "$ref": "#/definitions/Iterable"
             }
@@ -54,12 +49,14 @@
           }
         },
         "deprecated": false
-      },
+      }
+    },
+    "users/:id":{
       "put": {
         "tags": [
-          "donor-controller"
+          "user-controller"
         ],
-        "summary": "Update a donor information",
+        "summary": "Update a user information",
         "operationId": "UpdateDonorUsingPUT",
         "consumes": [
           "application/json"
@@ -70,17 +67,17 @@
         "parameters": [
           {
             "in": "body",
-            "name": "donor",
-            "description": "donor",
+            "name": "user",
+            "description": "user",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/Donor"
+              "$ref": "#/definitions/User"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully updated donor information",
+            "description": "Successfully updated user information",
             "schema": {
               "$ref": "#/definitions/ResponseEntity"
             }
@@ -102,10 +99,12 @@
           }
         },
         "deprecated": false
-      },
+      }
+    },
+    "users/user/:id":{
       "delete": {
-        "tags": ["donor-controller"],
-        "summary": "Deletes specific donor with the supplied donor id",
+        "tags": ["user-controller"],
+        "summary": "Deletes specific user with the supplied user id",
         "operationId": "deleteUsingDELETE",
         "produces": ["*/*"],
         "parameters": [
@@ -120,7 +119,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully deletes the specific donor"
+            "description": "Successfully deletes the specific user"
           },
           "204": {
             "description": "No Content"
@@ -143,25 +142,25 @@
     },
     "/auth/signin": {
       "post": {
-        "tags": ["donor-controller"],
-        "summary": "Create a new donor",
-        "operationId": "createDonorUsingPOST",
+        "tags": ["user-controller"],
+        "summary": "Create a new user",
+        "operationId": "createUserUsingPOST",
         "consumes": ["application/json"],
         "produces": ["*/*"],
         "parameters": [
           {
             "in": "body",
-            "name": "donor",
-            "description": "donor",
+            "name": "user",
+            "description": "user",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/Donor"
+              "$ref": "#/definitions/User"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully created a new donor",
+            "description": "Successfully created a new User",
             "schema": {
               "$ref": "#/definitions/ResponseEntity"
             }
@@ -185,25 +184,26 @@
         "deprecated": false
       }
     },
-    "/users/{id}": {
-      "get": {
-        "tags": ["donor-controller"],
-        "summary": "Retrieve specific donor with the supplied donor id",
-        "operationId": "getDonorUsingGET",
+    "/auth/login": {
+      "post": {
+        "tags": ["user-controller"],
+        "summary": "Retrieve specific user to see if the have signin ",
+        "operationId": "getUserUsingPost",
         "produces": ["*/*"],
         "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "id",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
+            {
+              "in": "body",
+              "name": "user",
+              "description": "user",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
         "responses": {
           "200": {
-            "description": "Successfully retrieved the donor with the supplied id",
+            "description": "Successfully logged in ",
             "schema": {
               "$ref": "#/definitions/ResponseEntity"
             }
@@ -225,133 +225,7 @@
       }
      
     }
-  },
-  "definitions": {
-    "Donor": {
-      "type": "object",
-      "properties": {
-        "bloodGroup": {
-          "type": "string"
-        },
-        "contactNo": {
-          "type": "string"
-        },
-        "dateOfBirth": {
-          "type": "string",
-          "format": "date"
-        },
-        "donorId": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "emergencyContactNo": {
-          "type": "string"
-        },
-        "firstName": {
-          "type": "string"
-        },
-        "firstTimeDonor": {
-          "type": "boolean"
-        },
-        "lastName": {
-          "type": "string"
-        }
-      },
-      "title": "Donor"
-    },
-    "Iterable": {
-      "type": "object",
-      "title": "Iterable"
-    },
-    "Iterable«Donor»": {
-      "type": "object",
-      "title": "Iterable«Donor»"
-    },
-    "ResponseEntity": {
-      "type": "object",
-      "properties": {
-        "body": {
-          "type": "object"
-        },
-        "statusCode": {
-          "type": "string",
-          "enum": [
-            "100 CONTINUE",
-            "101 SWITCHING_PROTOCOLS",
-            "102 PROCESSING",
-            "103 CHECKPOINT",
-            "200 OK",
-            "201 CREATED",
-            "202 ACCEPTED",
-            "203 NON_AUTHORITATIVE_INFORMATION",
-            "204 NO_CONTENT",
-            "205 RESET_CONTENT",
-            "206 PARTIAL_CONTENT",
-            "207 MULTI_STATUS",
-            "208 ALREADY_REPORTED",
-            "226 IM_USED",
-            "300 MULTIPLE_CHOICES",
-            "301 MOVED_PERMANENTLY",
-            "302 FOUND",
-            "302 MOVED_TEMPORARILY",
-            "303 SEE_OTHER",
-            "304 NOT_MODIFIED",
-            "305 USE_PROXY",
-            "307 TEMPORARY_REDIRECT",
-            "308 PERMANENT_REDIRECT",
-            "400 BAD_REQUEST",
-            "401 UNAUTHORIZED",
-            "402 PAYMENT_REQUIRED",
-            "403 FORBIDDEN",
-            "404 NOT_FOUND",
-            "405 METHOD_NOT_ALLOWED",
-            "406 NOT_ACCEPTABLE",
-            "407 PROXY_AUTHENTICATION_REQUIRED",
-            "408 REQUEST_TIMEOUT",
-            "409 CONFLICT",
-            "410 GONE",
-            "411 LENGTH_REQUIRED",
-            "412 PRECONDITION_FAILED",
-            "413 PAYLOAD_TOO_LARGE",
-            "413 REQUEST_ENTITY_TOO_LARGE",
-            "414 URI_TOO_LONG",
-            "414 REQUEST_URI_TOO_LONG",
-            "415 UNSUPPORTED_MEDIA_TYPE",
-            "416 REQUESTED_RANGE_NOT_SATISFIABLE",
-            "417 EXPECTATION_FAILED",
-            "418 I_AM_A_TEAPOT",
-            "419 INSUFFICIENT_SPACE_ON_RESOURCE",
-            "420 METHOD_FAILURE",
-            "421 DESTINATION_LOCKED",
-            "422 UNPROCESSABLE_ENTITY",
-            "423 LOCKED",
-            "424 FAILED_DEPENDENCY",
-            "425 TOO_EARLY",
-            "426 UPGRADE_REQUIRED",
-            "428 PRECONDITION_REQUIRED",
-            "429 TOO_MANY_REQUESTS",
-            "431 REQUEST_HEADER_FIELDS_TOO_LARGE",
-            "451 UNAVAILABLE_FOR_LEGAL_REASONS",
-            "500 INTERNAL_SERVER_ERROR",
-            "501 NOT_IMPLEMENTED",
-            "502 BAD_GATEWAY",
-            "503 SERVICE_UNAVAILABLE",
-            "504 GATEWAY_TIMEOUT",
-            "505 HTTP_VERSION_NOT_SUPPORTED",
-            "506 VARIANT_ALSO_NEGOTIATES",
-            "507 INSUFFICIENT_STORAGE",
-            "508 LOOP_DETECTED",
-            "509 BANDWIDTH_LIMIT_EXCEEDED",
-            "510 NOT_EXTENDED",
-            "511 NETWORK_AUTHENTICATION_REQUIRED"
-          ]
-        },
-        "statusCodeValue": {
-          "type": "integer",
-          "format": "int32"
-        }
-      },
-      "title": "ResponseEntity"
-    }
+
+   
   }
 }
